[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risktoolkit"
version = "0.1.0"
description = "A quantitative finance engine built from mathematical first principles"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Trishane Reid", email = "trishanereid@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/trishanereid/risktoolkit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
